crates/check_cli/tests/snapshots/main_commands_migrate_eslint/migrate_eslintrcyaml_unsupported.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: content
---
## `check.json`

```json
{}
```

## `.eslintrc.yaml`

```yaml

```

# Termination Message

```block
migrate ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Migration has encountered an error: ESLint configuration ending with the extension `yaml` are not supported.
  


```
