crates/check_cli/tests/snapshots/main_commands_migrate_eslint/migrate_merge_with_overrides.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: redactor(content)
---
## `check.json`

```json
{
  "overrides": [
    {
      "includes": ["*.js"],
      "linter": { "enabled": false }
    }
  ]
}
```

## `.eslintrc.json`

```json
{
        "overrides": [{
            "files": ["bin/*.js", "lib/*.js", null],
            "excludedFiles": "*.test.js",
            "rules": {
                "eqeqeq": ["off"]
            }
        }]
    }
```

# Emitted Messages

```block
.eslintrc.json:3:47 deserialize ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Incorrect type, expected a string, but received null.
  
    1 │ {
    2 │         "overrides": [{
  > 3 │             "files": ["bin/*.js", "lib/*.js", null],
      │                                               ^^^^
    4 │             "excludedFiles": "*.test.js",
    5 │             "rules": {
  

```

```block
check.json migrate ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i Configuration file can be updated.
  
    1  1 │   {
    2    │ - ········"overrides":·[{
    3    │ - ············"includes":·["*.js"],
    4    │ - ············"linter":·{·"enabled":·false·}
    5    │ - ········}]
    6    │ - ····}
       2 │ + → "linter":·{·"rules":·{·"recommended":·false·}·},
       3 │ + → "overrides":·[
       4 │ + → → {·"includes":·["*.js"],·"linter":·{·"enabled":·false·}·},
       5 │ + → → {
       6 │ + → → → "includes":·["bin/*.js",·"lib/*.js",·"!*.test.js"],
       7 │ + → → → "linter":·{·"rules":·{·"suspicious":·{·"noDoubleEquals":·"off"·}·}·}
       8 │ + → → }
       9 │ + → ]
      10 │ + }
      11 │ + 
  

```

```block
migrate ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i 100% (1/1) of the rules can be migrated.
  

```

```block
configuration ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i Migration results:
  
  - check.json: configuration needs migration.
  
  i Use --write to apply the changes.
  
  $ check migrate --write
  

```
