crates/check_cli/tests/snapshots/main_commands_migrate_eslint/migrate_no_eslint_config_packagejson.snap
---
source: crates/check_cli/tests/snap_test.rs
assertion_line: 424
expression: content
---
## `check.json`

```json
{ "linter": { "enabled": true } }
```

## `package.json`

```json
{
        "name": "foo",
        "version": "0.0.0"
    }
```

# Termination Message

```block
migrate ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Migration has encountered an error: The default ESLint configuration file `.eslintrc[.*]` was not found in the working directory.
  


```
